filling in gaps in non-matching regions, to match filled-in gaps of matching regions (see https://github.com/brownplt/code.pyret.org/issues/66)

--- a/src/web/css/editor.css
+++ b/src/web/css/editor.css
@@ -107,6 +107,8 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
 
 div.CodeMirror span.CodeMirror-nonmatchingbracket-region {
   background-color: #fdc;
+  border-top: 0.1em solid #fdd;
+  border-bottom: 0.1em solid #fdd;
   z-index: 4000;
 }
 
